# repo-analyzer

./: README.md  analyze_repo.py  main.py  pyproject.toml  requirements.txt  run_demo.sh  run_scan.sh
examples/: sample_scan_results.json
repo_agent/: analyzers.py  budgeting.py  cli.py  context_builder.py  detectors.py  importance.py  llm.py  models.py  prioritizer.py  reporter.py  scanner.py
src/repo_scanner_mvp/: cli.py  config.py  github_client.py  llm_client.py  models.py  report_writer.py  rules.py  scanner.py  utils.py
tests/: test_rules.py
